test/scc/decl/semantic-errors/053.a
053.t:1:6: error: array of functions is not allowed